# ray_tracing

./: .clang-format  .gitignore  CMakeLists.txt  MILESTONES.md  README.md  vcpkg.json  vcpkg_json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-BASELINE.json  v2.0-PERFORMANCE-CLAIMS-AUDIT.json  v2.0-REALTIME-MODERNIZATION-RESEARCH.md
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/: OptiX_ThirdParty_Licenses.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixBoundValues/: CMakeLists.txt  optixBoundValues.cpp  optixBoundValues.cu  optixBoundValues.h  optixBoundValues_ch.cu
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCallablePrograms/: CMakeLists.txt  optixCallablePrograms.cpp  optixCallablePrograms.cu  optixCallablePrograms.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixClusterStructuredMesh/: CMakeLists.txt  clusterUtils.cu  clusterUtils.h  optixClusterStructuredMesh.cpp  optixClusterStructuredMesh.cu  optixClusterStructuredMesh.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCompileCancel/: CMakeLists.txt  optixCompileCancel.cpp  optixCompileCancel.cu
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCompileWithTasks/: CMakeLists.txt  optixCompileWithTasks.cpp
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixConsole/: CMakeLists.txt  optixConsole.cpp  optixConsole.cu  optixConsole.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCurves/: CMakeLists.txt  optixCurves.cpp  optixCurves.cu  optixCurves.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCustomCache/: CMakeLists.txt  optixCustomCache.cpp  optixCustomCache.cu  optixCustomCache.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCustomCache/libcache/: CMakeLists.txt  README.md  libcache.cpp  libcache.def  libcache.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCustomCache/netcache/: README.md  cache_client.py  cache_server.py  requirements.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCustomPrimitive/: CMakeLists.txt  optixCustomPrimitive.cpp  optixCustomPrimitive.cu  optixCustomPrimitive.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixCutouts/: CMakeLists.txt  optixCutouts.cpp  optixCutouts.cu  optixCutouts.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixDenoiser/: CMakeLists.txt  README.TXT  applyflow.h  optixDenoiser.cpp
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixDynamicMaterials/: CMakeLists.txt  optixDynamicMaterials.cpp  optixDynamicMaterials.cu  optixDynamicMaterials.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixHair/: CMakeLists.txt  Hair.cpp  Hair.h  Head.cpp  Head.h  ProgramGroups.cpp  ProgramGroups.h  Renderers.cpp  Renderers.h  Util.h  curve.h  optixHair.cpp  optixHair.cu  optixHair.cuh  optixHair.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixHello/: CMakeLists.txt  draw_solid_color.cu  optixHello.cpp  optixHello.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixMeshViewer/: CMakeLists.txt  optixMeshViewer.cpp
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixMixSDKs/: CMakeLists.txt  optixMixSDKs.cpp  optixSDK750.cpp  optixSDKCurrent.cpp
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixModuleCreateAbort/: CMakeLists.txt  optixModuleCreateAbort.cpp  optixModuleCreateAbort.cu  optixModuleCreateAbort.h  optixModuleCreateAbort_ch.cu  optixModuleCreateProcess.cpp
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixMotionGeometry/: CMakeLists.txt  motionHelper.hpp  optixMotionGeometry.cpp  optixMotionGeometry.cu  optixMotionGeometry.h  vertices.cu  vertices.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixMultiGPU/: CMakeLists.txt  optixMultiGPU.cpp  optixMultiGPU.cu  optixMultiGPU.h  optixMultiGPU_kernels.cu
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixNVLink/: CMakeLists.txt  nvml_configure.h.in  optixNVLink.cpp  optixNVLink.cu  optixNVLink.h  optixNVLink_kernels.cu
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixNeuralTexture/: CMakeLists.txt  NtcInference.h  NtcTexture.h  NtcTextureSet.h  README.txt  optixNeuralTexture.cpp  optixNeuralTexture.h  optixNeuralTextureKernel.cu  optixNeuralTextureUtil.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixNeuralTexture/libntc/include/libntc/: ntc.h  wrappers.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixOpacityMicromap/: CMakeLists.txt  optixOpacityMicromap.cpp  optixOpacityMicromap.cu  optixOpacityMicromap.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixOpticalFlow/: CMakeLists.txt  optixOpticalFlow.cpp  optixOpticalFlow.cu  optix_denoiser_opticalflow.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixRaycasting/: CMakeLists.txt  optixRaycasting.cpp  optixRaycasting.cu  optixRaycasting.h  optixRaycastingKernels.cu  optixRaycastingKernels.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixRibbons/: CMakeLists.txt  optixRibbons.cpp  optixRibbons.cu  optixRibbons.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixSphere/: CMakeLists.txt  optixSphere.cpp  optixSphere.cu
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixVolumeViewer/: CMakeLists.txt  optixVolumeViewer.cpp  optixVolumeViewer.h  volume.cu  volume.h  volume_cuda.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/optixWhitted/: CMakeLists.txt  optixWhitted.cpp  optixWhitted.cu  optixWhitted.h
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/support/: CMakeLists.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/support/imgui/: CMakeLists.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/support/miniz/: CMakeLists.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/support/zeromq-4.3.5/: CMakeLists.txt
NVIDIA-OptiX-SDK-9.1.0-linux64-x86_64/SDK/support/zeromq-4.3.5/src/: windows.hpp
cmake/: GenerateBuildProvenance.cmake  VerifyRenderRealtimeFourCameraProfiling.cmake  VerifyRenderRealtimeProfiling.cmake
tests/: camera_contract_fixtures.h  test_analytic_light_compiler.cpp  test_analytic_light_quantitative.cpp  test_camera_models.cpp  test_camera_rig.cpp  test_cpu_render_smoke.cpp  test_cpu_scene_adapter.cpp  test_cuda_event_timer.cpp  test_cuda_gl_presenter.cpp  test_device_frame_buffers.cpp  test_device_scene_buffers.cpp  test_direction_debug_renderer.cpp  test_display_transfer.cpp  test_frame_convention.cpp  test_light_sampling.cpp  (+53 more)
(+341 files in other folders)
